adds update and delete handlers, updates date type
